Added admin controller and display for metrics. Added navigation to test error cases. Added service method to get list of metrics.

--- a/demo4/Views/Shared/_Layout.cshtml
+++ b/demo4/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+					<li>@Html.ActionLink("Bad Code","BadCode")</li>
+					<li>@Html.ActionLink("Bad Result","BadResult")</li>
+					<li>@Html.ActionLink("Force Status", "ForceStatusCode")</li>
+					<li>@Html.ActionLink("Admin","Index","Admin")</li>
                 </ul>
             </div>
         </div>
