--- a/demoWebApp/Views/_ViewImports.cshtml
+++ b/demoWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using demo4
-@using demo4.Models
+﻿@using demoWebApp
+@using demoWebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
