Add global Razor variable for application name.

--- a/demoWebApp/Views/Shared/_Layout.cshtml
+++ b/demoWebApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - demo4</title>
+    <title>@ViewData["Title"] - @ViewBag.ApplicationName</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -48,7 +48,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - demo4</p>
+            <p>@ViewBag.ApplicationName - Copyright &copy; 2018 Magenic Technologies. All rights reserved.</p>
         </footer>
     </div>
 
