--- a/demoWebApp/Views/Shared/_Layout.cshtml
+++ b/demoWebApp/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-					<li>@Html.ActionLink("Bad Code","BadCode")</li>
-					<li>@Html.ActionLink("Bad Result","BadResult")</li>
-					<li>@Html.ActionLink("Force Status", "ForceStatusCode")</li>
-					<li>@Html.ActionLink("Admin","Index","Admin")</li>
+                    <li>@Html.ActionLink("Bad Code", "BadCode")</li>
+                    <li>@Html.ActionLink("Bad Result", "BadResult")</li>
+                    <li>@Html.ActionLink("Force Status", "ForceStatusCode")</li>
+                    <li>@Html.ActionLink("Admin", "Index", "Admin", new AdminIndexInput { PageSize = 10, PageNumber = 1, ApplicationFilter = "" })</li>
                 </ul>
             </div>
         </div>
