--- a/demoWebApp/Views/Admin/Index.cshtml
+++ b/demoWebApp/Views/Admin/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model demoWebApp.Models.ViewBinding.AdminIndexView
 @using MagenicMetrics
+@section Scripts{
+    @Html.Partial("_ValidationScriptsPartial")
+}
 @{
     ViewData["Title"] = "Metrics";
     var metricList = Model.Metrics;
@@ -12,14 +15,27 @@
 else
 {
     <h2>Page # @Model.PageNumber - @ViewBag.Count Records</h2>
-    <form asp-page="/Admin/Index" method="get">
-        <div class="form-actions no-color">
-            <p>
-                Application Name Filter: <input type="text" name="ApplicaitonFilter" value="@Model.ApplicationFilter" />
-                Page No: <input type="number" name="PageNumber" value="@Model.PageNumber" />
-                Page Size: <input type="number" name="PageSize" value="@Model.PageSize" />
-                <input type="submit" value="Search" class="btn btn-default" />
-            </p>
+    <form asp-action="Index" asp-controller="Admin" method="get">
+        <div class="form-actions no-color form-horizontal">
+            <div class="form-group col-md-3">
+                <label asp-for="ApplicationFilter"></label>
+                <input class="form-control" asp-for="ApplicationFilter" />
+                <span asp-validation-for="ApplicationFilter"></span>
+            </div>
+            <div class="form-group col-md-2">
+                <label asp-for="PageNumber"></label>
+                <input class="form-control" asp-for="PageNumber" />
+                <span asp-validation-for="PageNumber"></span>
+            </div>
+            <div class="form-group col-md-2">
+                <label asp-for="PageSize"></label>
+                <input class="form-control" asp-for="PageSize" />
+                <span asp-validation-for="PageSize"></span>
+            </div>
+            <div class="form-group col-md-2">
+                <label>&nbsp;</label><br />
+                <button type="submit" class="btn btn-default">Apply Filter</button>
+            </div>
         </div>
     </form>
     <table class="table">
