Converted part HTML to tag helper.

--- a/demoWebApp/Views/Admin/Index.cshtml
+++ b/demoWebApp/Views/Admin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model demoWebApp.Models.ViewBinding.AdminIndexView
 @using MagenicMetrics
-@section Scripts{
-    @Html.Partial("_ValidationScriptsPartial")
+@section Scripts{ 
+    <partial name="_ValidationScriptsPartial" />
 }
 @{
     ViewData["Title"] = "Metrics";
@@ -17,7 +17,7 @@ else
     <h2>Page # @Model.PageNumber - @ViewBag.Count Records</h2>
     <form asp-action="Index" asp-controller="Admin" method="get">
         <div class="form-actions no-color form-horizontal">
-            <div class="form-group col-md-3">
+            <div class="form-group col-md-4">
                 <label asp-for="ApplicationFilter"></label>
                 <input class="form-control" asp-for="ApplicationFilter" />
                 <span asp-validation-for="ApplicationFilter"></span>
