--- a/demoWebApp/Views/Admin/Index.cshtml
+++ b/demoWebApp/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model demoWebApp.Models.ViewBinding.AdminIndexView
 @using MagenicMetrics
-@section Scripts{ 
+@section Scripts{
     <partial name="_ValidationScriptsPartial" />
 }
 @{
@@ -14,30 +14,37 @@
 }
 else
 {
+    <div asp-validation-summary="All"></div>
+    <hr class="col-md-12" />
+    <div class="col-md-12">
+        <form asp-action="Index" asp-controller="Admin" method="get">
+            <div class="form-actions">
+                <div class="form-group col-md-4">
+                    <label asp-for="ApplicationFilter"></label>
+                    <input class="form-control" asp-for="ApplicationFilter" />
+                    <span asp-validation-for="ApplicationFilter"></span>
+                </div>
+                <div class="form-group col-md-2">
+                    <label asp-for="PageNumber"></label>
+                    <input class="form-control" asp-for="PageNumber" />
+                    <span asp-validation-for="PageNumber"></span>
+                </div>
+                <div class="form-group col-md-2">
+                    <label asp-for="PageSize"></label>
+                    <input class="form-control" asp-for="PageSize" />
+                    <span asp-validation-for="PageSize"></span>
+                </div>
+                <div class="form-group col-md-2">
+                    <label>&nbsp;</label><br />
+                    <button type="submit" class="btn btn-default">Apply Filter</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <br />
+    <hr class="col-md-12" />
+    <br />
     <h2>Page # @Model.PageNumber - @ViewBag.Count Records</h2>
-    <form asp-action="Index" asp-controller="Admin" method="get">
-        <div class="form-actions">
-            <div class="form-group col-md-4">
-                <label asp-for="ApplicationFilter"></label>
-                <input class="form-control" asp-for="ApplicationFilter" />
-                <span asp-validation-for="ApplicationFilter"></span>
-            </div>
-            <div class="form-group col-md-2">
-                <label asp-for="PageNumber"></label>
-                <input class="form-control" asp-for="PageNumber" />
-                <span asp-validation-for="PageNumber"></span>
-            </div>
-            <div class="form-group col-md-2">
-                <label asp-for="PageSize"></label>
-                <input class="form-control" asp-for="PageSize" />
-                <span asp-validation-for="PageSize"></span>
-            </div>
-            <div class="form-group col-md-2">
-                <label>&nbsp;</label><br />
-                <button type="submit" class="btn btn-default">Apply Filter</button>
-            </div>
-        </div>
-    </form>
     <table class="table">
         <thead>
             <tr>
