--- a/demoWebApp/Views/Shared/_Layout.cshtml
+++ b/demoWebApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Hosting.IHostingEnvironment hostingEnv
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -19,6 +20,7 @@
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
+            <environment include="development,testing,staging"><div class="navbar-brand">@hostingEnv.EnvironmentName | </div></environment>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -26,17 +28,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">demo4</a>
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand navbar-left">@ViewBag.ApplicationName</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li>@Html.ActionLink("Bad Code", "BadCode")</li>
-                    <li>@Html.ActionLink("Bad Result", "BadResult")</li>
-                    <li>@Html.ActionLink("Force Status", "ForceStatusCode")</li>
-                    <li>@Html.ActionLink("Admin", "Index", "Admin", new AdminIndexInput { PageSize = 10, PageNumber = 1, ApplicationFilter = "" })</li>
+                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Home" asp-action="BadCode">Bad Code</a></li>
+                    <li><a asp-controller="Home" asp-action="BadResult">Bad Result</a></li>
+                    <li><a asp-controller="Home" asp-action="Force Status">Force Status</a></li>
+                    <li><a asp-controller="Admin" asp-action="Index" asp-route-PageSize="10" asp-route-PageNumber="1">Metrics</a></li>
                 </ul>
             </div>
         </div>
