--- a/demoWebApp/Views/Shared/_Layout.cshtml
+++ b/demoWebApp/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-controller="Home" asp-action="BadCode">Bad Code</a></li>
                     <li><a asp-controller="Home" asp-action="BadResult">Bad Result</a></li>
-                    <li><a asp-controller="Home" asp-action="Force Status">Force Status</a></li>
+                    <li><a asp-controller="Home" asp-action="ForceStatusCode" asp-route-Code="101">Force Status</a></li>
                     <li><a asp-controller="Admin" asp-action="Index" asp-route-PageSize="10" asp-route-PageNumber="1">Metrics</a></li>
                 </ul>
             </div>
