Moved common view imports to more global location.

--- a/demoWebApp/Views/Admin/Index.cshtml
+++ b/demoWebApp/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoWebApp.Models.ViewBinding.AdminIndexView
+﻿@model AdminIndexView
 @using MagenicMetrics
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
