--- a/demoWebApp/Views/Shared/_Layout.cshtml
+++ b/demoWebApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@inject Microsoft.AspNetCore.Hosting.IHostingEnvironment hostingEnv
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
