--- a/demoWebApp/Views/_ViewImports.cshtml
+++ b/demoWebApp/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using demoWebApp
 @using demoWebApp.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using demoWebApp.Models.InputBinding
+@using demoWebApp.Models.ViewBinding
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject Microsoft.AspNetCore.Hosting.IHostingEnvironment hostingEnv
