Added ASP.NET Identity to include user name in metrics.

--- a/demoWebApp/Views/Shared/_Layout.cshtml
+++ b/demoWebApp/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                     <li><a asp-controller="Home" asp-action="ForceStatusCode" asp-route-Code="101">Force Status</a></li>
                     <li><a asp-controller="Admin" asp-action="Index" asp-route-PageSize="10" asp-route-PageNumber="1">Metrics</a></li>
                 </ul>
+                <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
