--- a/demoWebApp/Views/Admin/Index.cshtml
+++ b/demoWebApp/Views/Admin/Index.cshtml
@@ -17,7 +17,7 @@ else
     <div asp-validation-summary="All"></div>
     <hr class="col-md-12" />
     <div class="col-md-12">
-        <form asp-action="Index" asp-controller="Admin" method="get">
+        <form asp-action="Index" asp-controller="Admin" method="post">
             <div class="form-actions">
                 <div class="form-group col-md-4">
                     <label asp-for="ApplicationFilter"></label>
