Fixed another form to handle get/post. Fixed errors to show in red.

--- a/demoWebApp/Views/Home/Contact.cshtml
+++ b/demoWebApp/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
-	ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@Html.Raw(ViewData["Message"])</h3>
 
 <address>
-	One Microsoft Way<br />
-	Redmond, WA 98052-6399<br />
-	<abbr title="Phone">P:</abbr>
-	425.555.0100
+    404 Wyman St, Ste 450<br />
+    Waltham, MA 02451<br />
+    <abbr title="Phone">P:</abbr>
+    781.478.1450
 </address>
 
 <address>
-	<strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-	<strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong> <a href="mailto:bradf@magenic.com">Brad Friedlander</a><br />
 </address>
