--- a/demoWebApp/Views/Shared/_Layout.cshtml
+++ b/demoWebApp/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                     <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-controller="Home" asp-action="BadCode">Bad Code</a></li>
                     <li><a asp-controller="Home" asp-action="BadResult">Bad Result</a></li>
-                    <li><a asp-controller="Home" asp-action="ForceStatusCode" asp-route-Code="101">Force Status</a></li>
+                    <li><a asp-controller="Home" asp-action="ForceStatusCode">Force Status</a></li>
                     <li><a asp-controller="Admin" asp-action="Index">Metrics</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
