--- a/demoWebApp/Views/Home/ForceStatusCode.cshtml
+++ b/demoWebApp/Views/Home/ForceStatusCode.cshtml
@@ -5,15 +5,15 @@
 }
 
 <h2>ForceStatusCode</h2>
-<div asp-validation-summary="All"></div>
+<div asp-validation-summary="All" class="text-danger"></div>
 <hr class="col-md-12" />
 <div class="col-md-12">
-    <form asp-action="ForceStatusCode" asp-controller="Home" method="get">
+    <form asp-action="ForceStatusCode" asp-controller="Home" method="post">
         <div class="form-actions">
             <div class="form-group col-md-3">
                 <label asp-for="Code"></label>
                 <input class="form-control" asp-for="Code" />
-                <span asp-validation-for="Code"></span>
+                <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group col-md-2">
                 <label>&nbsp;</label><br />
