Create controller and views to support testing of access to Web API.

--- a/demoWebApp/Views/Admin/Index.cshtml
+++ b/demoWebApp/Views/Admin/Index.cshtml
@@ -61,7 +61,7 @@ else
                     @Html.DisplayNameFor(model => model.Metrics[0].Details)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Metrics[0].ElpasedTime)
+                    @Html.DisplayNameFor(model => model.Metrics[0].ElapsedTime)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Metrics[0].ExceptionMessage)
@@ -109,7 +109,7 @@ else
                         @Html.DisplayFor(modelItem => item.Details)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ElpasedTime)
+                        @Html.DisplayFor(modelItem => item.ElapsedTime)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.ExceptionMessage)
