--- a/demoWebApp/Views/_ViewImports.cshtml
+++ b/demoWebApp/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using demoWebApp.Models.InputBinding
 @using demoWebApp.Models.ViewBinding
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, demoWebApp
 @inject Microsoft.AspNetCore.Hosting.IHostingEnvironment hostingEnv
