--- a/sample/demoWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/sample/demoWebApp/Views/Shared/_LoginPartial.cshtml
@@ -13,6 +13,7 @@
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
             </li>
+            <li><a asp-controller="Home" asp-action="Logout">Identity Server Logout</a></li>
         </ul>
     </form>
 }
